--- a/m/my.html
+++ b/m/my.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="js/lib/weuijs/style/weuijs.min.css">
     <link rel="stylesheet" href="css/ui-base.css">
     <style type="text/css">
-    html,
+    /*html,
     body {
         height: 100%;
-    }
+    }*/
     </style>
 </head>
 
@@ -37,7 +37,7 @@
             <div class="weui-grids">
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
-                        <i class="icon-other-income"></i>
+                        <i class="icon-income-b"></i>
                     </div>
                     <div class="weui-grid__label">
                         <p>未结算收益</p>
@@ -67,7 +67,7 @@
             <div class="weui-grids">
                 <a href="" class="weui-grid">
                     <div class="weui-grid__icon">
-                        <i class="icon-merchant"></i>
+                        <i class="icon-wealth"></i>
                     </div>
                     <div class="weui-grid__label">
                         <p>我的客户</p>
